# crucible-predictor

./: .gitignore  Dockerfile  EXPERIMENTS.md  NOTICE  OVERVIEW.md  README.md  config.py  conftest.py  data_manifest.py  flow-doctor-model-zoo.yaml  flow-doctor-regime.yaml  flow-doctor-training.yaml  flow-doctor.yaml  ops_alerts.py  polygon_client.py  pyproject.toml  requirements-lambda.txt  requirements.txt
.github/: pip-audit-ignore.txt
analysis/: horizon_battery.py  low_n_selection_estimator.py  observe_leaderboard.py  regime_cutover_gate.py  triple_barrier_cutover_runner.py  variant_cutover_gate.py
config/: predictor.sample.yaml
data/: dataset.py  earnings_fetcher.py  label_generator.py  residual_momentum_features.py
inference/: daily_predict.py  deploy_drift.py  handler.py  level_neutralization.py  lib_pin_drift.py  pipeline.py  pipeline_contract_check.py  preflight.py  research_free_inference.py  trading_day_gate.py
infrastructure/: README.md  deploy.sh  rollback.sh  setup-regime-retrospective-eval-lambda.sh  spot_train.sh
labeling/: __init__.py  triple_barrier.py
model/: calibrator.py  canonical_alpha_labels.py  gbm_scorer.py  meta_label_classifier.py  meta_model.py  momentum_scorer.py  output_distribution_gate.py  regime_predictor.py  regime_predictor_v2.py  registry.py  research_gbm.py  residual_momentum_scorer.py  stance_classifier.py  subsample_validator.py
monitoring/: drift_detector.py  feature_drift.py
regime/: __init__.py  bocpd.py  composite.py  drawdown.py  features.py  handler.py  hmm.py  retrospective_eval.py  substrate.py  (+1 more)
(+193 files in other folders)
